--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "bootstrap": "^3.3.6",
+    "components-font-awesome": "^4.5.0",
+    "angular-bootstrap": "^1.2.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
