--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,11 @@
     "angular": "~1.4.2",
     "bootstrap": "^3.3.6",
     "components-font-awesome": "^4.5.0",
-    "angular-bootstrap": "^1.2.5"
+    "angular-bootstrap": "^1.2.5",
+    "screwdefaultbuttons": "*",
+    "angular-google-maps": "^2.3.2",
+    "ngmap": "^1.16.7",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
