--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "screwdefaultbuttons": "*",
     "angular-google-maps": "^2.3.2",
     "ngmap": "^1.16.7",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "ngInfiniteScroll": "1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
