--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-google-maps": "^2.3.2",
     "ngmap": "^1.16.7",
     "ng-file-upload": "^12.0.4",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "angular-input-masks": "^2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
