--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "ngmap": "^1.16.7",
     "ng-file-upload": "^12.0.4",
     "ngInfiniteScroll": "1.0.0",
-    "angular-input-masks": "^2.2.0"
+    "angular-input-masks": "^2.2.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
