--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "ng-file-upload": "^12.0.4",
     "ngInfiniteScroll": "1.0.0",
     "angular-input-masks": "^2.2.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-vertilize": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
