--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "material-design-iconfont": "~0.0.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
+    "moment": "^2.12.0",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
     "bootstrap": "^3.3.6",
